# ICP-Supply-Chain

./: README.md  README_WALLET.md  package-lock.json  package.json  setup_internet_identity.sh
app/: layout.tsx  page.tsx
components/: wallet-connect.tsx  wallet-debug.tsx
hooks/: use-icp-wallet.ts
icp_backend/: Cargo.toml  README.md  add_supply_chain_events.sh  deploy.sh  dfx.json  query_examples.sh  test_data.sh
icp_backend/.dfx/local/: canister_ids.json  wallets.json
icp_backend/.dfx/local/canisters/supply_chain_backend/: constructor.did  index.js  service.did.d.ts  service.did.js  supply_chain_backend.wasm
icp_backend/.dfx/network/local/: network-id  replica-effective-config.json
icp_backend/.dfx/network/local/state/replicated_state/: registry.proto  topology.json
icp_backend/.dfx/network/local/state/replicated_state/17ee969f4d56997f3cb9c0221c0f3f903d631a7c1a552782824808c315d8356a/: states_metadata.pbuf
icp_backend/.dfx/network/local/state/replicated_state/6e655e8caf4623e62de63754a2fd2a8cb2621c5a7899ed82efdcadb73a866cf5/: states_metadata.pbuf
icp_backend/.dfx/network/local/state/replicated_state/a6dfc52868e089ed1e5e5484e117df14d0f76fe21bde22e7555ed6a02f999124/: states_metadata.pbuf
icp_backend/.dfx/network/local/state/replicated_state/afaae1e3a02bd8ec832ab318fa2ef257e7ab791b06d8c4da04488deddef3339c/: states_metadata.pbuf
icp_backend/.dfx/network/local/state/replicated_state/f3e0a9711469429c3d961cd911fea7495e3919476b8d5de66cba203f05d9a734/: states_metadata.pbuf
icp_backend/src/: lib.rs  storage.rs  types.rs  utils.rs
lib/: icp-client.ts
(+31 files in other folders)
