[package]
name = "supply_chain_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["custom"] }

[dependencies.ic-cdk-macros]
version = "0.9"
